--- a/index.html
+++ b/index.html
@@ -1,2 +1,82 @@
 <!DOCTYPE html>
 <html lagn="en"></html>
+    <head>
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <meta charset-UTF-8 />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Andrea Rowland Portfolio</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
+    <body>
+    <header>
+        <h1>Andrea Rowland</h1>
+        <nav>
+            <!-- Unordered list element-->
+            <ul>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#skills">Skills</a>
+                </li>
+                <li>
+                    <a href="#my-work">My Work</a>
+                </li>
+                <li>
+                    <a href="#contact-info">Contact Info</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- hero-jumbotron -->
+    <section class="hero">
+        <h2></h2>
+    </section>
+
+    <!-- "about me" section -->
+    <section id="about" class="bio">
+        <div class="flex-row">
+            <h2 class="section-title">About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime dolorem, voluptatem quaerat, quisquam distinctio maiores eius debitis aut consequuntur, nisi perspiciatis dolor ipsam neque magnam accusantium facilis quia qui ad.</p>
+        </div>
+        <article class="photo">
+            <img src="./assets/images/andrea-rowland.jpg" alt="Andrea Rowland smiling">
+           
+        </article>
+      </section>
+
+
+    <!-- "my skills" -->
+    <section>
+        <div id="skills" class="flex-row">
+            <h2>My Skills</h2>
+        </div>
+        <article class="skill-logos">
+            <img src="./assets/images/html-1.svg" alt="HTML Logo">
+            <img src="./assets/images/CSS3_logo.svg" alt="CSS logo">
+            <img src="./assets/images/JavaScript-logo.png" alt="JavaScript logo">
+            <img src="./assets/images/Visual_Studio_Code_1.35_icon.svg" alt="Visual Studio Code Logo">
+            <img src="./assets/images/Git-Icon-Black.png" alt="Git logo">
+            <img src="./assets/images/GitHub/GitHub-Mark-120px-plus.png" alt="GitHub OctoCat logo"> 
+        </article>
+    </section>
+
+    <!-- "my work" section -->
+    <section>
+        <div id="my-work" class="flex-row">
+            <h2>My Work</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi unde qui rerum sapiente modi eaque voluptatibus esse dicta, consequuntur distinctio tenetur ipsa! Adipisci, sit odit molestias nisi et laboriosam tenetur!</p>
+        </div>
+    </section>
+
+
+    <!-- "contact info" -->
+    <section>
+        <div id="contact-info" class="flex-row">
+            <h2>Contact Info</h2>
+
+        </div>
+    </section>
+</body>
+
