--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Andrea Rowland Portfolio</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
     <header>
@@ -38,10 +39,11 @@
     <section id="about" class="bio">
         <div class="flex-row">
             <h2 class="section-title">About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime dolorem, voluptatem quaerat, quisquam distinctio maiores eius debitis aut consequuntur, nisi perspiciatis dolor ipsam neque magnam accusantium facilis quia qui ad.</p>
+            <p>For the past 14 years, I have been working in Higher Education. I've helped students transition from high school to college succesfully, ensured they made the most of their first year at the University, and  assisted them in finding research positions and presenting/publishing their work. My experience at the University has given me the opportunity to work with people in various demographics, learn how to operate successfully in a large University, and manage programs and people to produce optimal results.</p><br/>
+            <p>Ready for a new challenge, I decided to enroll in the University of Utah's Full Stack Development Bootcamp. I'm thrilled to be learning new concepts and languages and finding ways to implement them in my work.</p>
         </div>
         <article class="photo">
-            <img src="./assets/images/andrea-rowland.jpg" alt="Andrea Rowland smiling">
+            <img src="./assets/images/andrea-rowland-crop.jpg" alt="Andrea Rowland smiling">
            
         </article>
       </section>
@@ -52,30 +54,62 @@
         <div id="skills" class="flex-row">
             <h2>My Skills</h2>
         </div>
-        <article class="skill-logos">
-            <img src="./assets/images/html-1.svg" alt="HTML Logo">
-            <img src="./assets/images/CSS3_logo.svg" alt="CSS logo">
-            <img src="./assets/images/JavaScript-logo.png" alt="JavaScript logo">
-            <img src="./assets/images/Visual_Studio_Code_1.35_icon.svg" alt="Visual Studio Code Logo">
-            <img src="./assets/images/Git-Icon-Black.png" alt="Git logo">
-            <img src="./assets/images/GitHub/GitHub-Mark-120px-plus.png" alt="GitHub OctoCat logo"> 
+        <article class="skill-logos" class="colorful">
+            <div>
+                <img src="./assets/images/html-1.svg" alt="HTML Logo" width="100px" height="auto">
+            </div>
+            <div>
+                <img src="./assets/images/CSS3_logo.svg" alt="CSS logo" width="100px" height="auto">
+            </div>
+            <div>   
+                <img src="./assets/images/JavaScript-logo.png" alt="JavaScript logo" width="100px" height="auto">
+            </div> 
+            <div>
+                <img src="./assets/images/Visual_Studio_Code_1.35_icon.svg" alt="Visual Studio Code Logo"width="100px" height="auto">
+            </div>
+            <div>
+                <img src="./assets/images/Git-Icon-Black.png" alt="Git logo" width="100px" height="auto">
+            </div>
+            <div>
+                <img src="./assets/images/GitHub/GitHub-Mark-120px-plus.png" alt="GitHub OctoCat logo" width="100px" height="auto"> 
+            </div>
         </article>
     </section>
 
     <!-- "my work" section -->
     <section>
-        <div id="my-work" class="flex-row">
+        <div id="my-work">
             <h2>My Work</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi unde qui rerum sapiente modi eaque voluptatibus esse dicta, consequuntur distinctio tenetur ipsa! Adipisci, sit odit molestias nisi et laboriosam tenetur!</p>
+            <div class="premier-work">
+                <img src="./assets/images/run-buddy.JPG" alt="Main landing page of the Run Buddy website">
+            </div>
+            <div>
+                <img src="./assets/images/Horiseon.JPG" alt="Main landing page of the Horiseon website">
+            </div>
+            <div>
+                <img src="">
+            </div>
+            
         </div>
     </section>
 
 
     <!-- "contact info" -->
-    <section>
-        <div id="contact-info" class="flex-row">
+    <section id="contact-info">
+        <div class="flex-row">
             <h2>Contact Info</h2>
-
+        </div>
+        <div class="get-in-touch">
+            <h3>Get In Touch</h3><br/>
+            P: 801.201.1555<br/>
+            E: <a href="mailto:andreadrowland@gmail.com">andreadrowland@gmail.com</a>
+        </div>
+        <div class="feeling-social">
+            <h3>Feeling Social?</h3><br/>
+            <p>Find me on these online spaces too!</p>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-instagram"></a>
         </div>
     </section>
 </body>
