added my work boxes

--- a/index.html
+++ b/index.html
@@ -77,19 +77,29 @@
     </section>
 
     <!-- "my work" section -->
-    <section>
-        <div id="my-work">
-            <h2>My Work</h2>
-            <div class="premier-work">
-                <img src="./assets/images/run-buddy.JPG" alt="Main landing page of the Run Buddy website">
+    <section class="work">
+        <div id="my-work" class="work-examples">
+           <div>
+            <h2>My Work</h2><br/>
             </div>
-            <div>
-                <img src="./assets/images/Horiseon.JPG" alt="Main landing page of the Horiseon website">
-            </div>
-            <div>
-                <img src="">
-            </div>
-            
+            <article class="first">
+                <a href="https://andrea-rowland.github.io/run-buddy/">
+                    <img src="./assets/images/run-buddy.JPG" alt="Screenshot of the main landing page of the Run Buddy Website" id="first-sample">
+                    <label for="first-sample">Run Buddy Website</label>
+                </a>
+            </article>
+            <article>
+                <a href="https://andrea-rowland.github.io/code-refactor/">
+                    <img src="./assets/images/Horiseon.JPG" alt="Preview of the Horiseon website" id="horiseon">
+                    <label for="horiseon" class="project-title">Horiseon Code Refactor</label>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.songbird-musicstudio.com/">
+                    <img src="./assets/images/Songbird-website.JPG" alt="Studio name with rainbow colored bird with instruments and notes integrated into it's body" id="songbird">
+                    <label for="songbird" class="project title">Songbird Music Studio Website</label>
+                </a>
+            </article>
         </div>
     </section>
 
