--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 
     <!-- "my skills" -->
-    <section>
-        <div id="skills" class="flex-row">
+    <section id="skills">
+        <div class="flex-row">
             <h2>My Skills</h2>
         </div>
         <article class="skill-logos" class="colorful">
@@ -105,7 +105,7 @@
 
 
     <!-- "contact info" -->
-    <section id="contact-info">
+    <section id="contact-info" class="contact">
         <div class="flex-row">
             <h2>Contact Info</h2>
         </div>
