--- a/index.html
+++ b/index.html
@@ -50,30 +50,26 @@
 
 
     <!-- "my skills" -->
-    <section id="skills">
-        <div class="flex-row">
-            <h2>My Skills</h2>
-        </div>
-        <article class="skill-logos" class="colorful">
+    <section id="skills" class="flex-row">
+             <h2>My Skills</h2>
             <div>
-                <img src="./assets/images/html-1.svg" alt="HTML Logo" width="100px" height="auto">
+                <img src="./assets/images/html-1.svg" alt="HTML Logo" width="100px" height="auto" class="skill-logos" >
             </div>
-            <div>
-                <img src="./assets/images/CSS3_logo.svg" alt="CSS logo" width="100px" height="auto">
+            <div class="skill-logos" >
+                <img src="./assets/images/CSS3_logo.svg" alt="CSS logo" width="100px" height="auto" class="skill-logos">
             </div>
             <div>   
-                <img src="./assets/images/JavaScript-logo.png" alt="JavaScript logo" width="100px" height="auto">
+                <img src="./assets/images/JavaScript-logo.png" alt="JavaScript logo" width="100px" height="auto" class="skill-logos">
             </div> 
             <div>
-                <img src="./assets/images/Visual_Studio_Code_1.35_icon.svg" alt="Visual Studio Code Logo"width="100px" height="auto">
+                <img src="./assets/images/Visual_Studio_Code_1.35_icon.svg" alt="Visual Studio Code Logo"width="100px" height="auto" class="skill-logos">
             </div>
             <div>
-                <img src="./assets/images/Git-Icon-Black.png" alt="Git logo" width="100px" height="auto">
+                <img src="./assets/images/Git-Icon-Black.png" alt="Git logo" width="100px" height="auto" class="skill-logos">
             </div>
             <div>
-                <img src="./assets/images/GitHub/GitHub-Mark-120px-plus.png" alt="GitHub OctoCat logo" width="100px" height="auto"> 
+                <img src="./assets/images/GitHub/GitHub-Mark-120px-plus.png" alt="GitHub OctoCat logo" width="100px" height="auto" class="skill-logos"> 
             </div>
-        </article>
     </section>
 
     <!-- "my work" section -->
