first media query done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- "my skills" -->
     <section id="skills" class="flex-row">
-             <h2>My Skills</h2>
+             <h2>My Skills</h2 class="skills h2">
             <div>
                 <img src="./assets/images/html-1.svg" alt="HTML Logo" width="100px" height="auto" class="skill-logos" >
             </div>
@@ -74,10 +74,10 @@
 
     <!-- "my work" section -->
     <section class="work">
+        <div>
+            <h2>My Work</h2>
+        </div>
         <div id="my-work" class="work-examples">
-           <div>
-            <h2>My Work</h2><br/>
-            </div>
             <article class="first">
                 <a href="https://andrea-rowland.github.io/run-buddy/">
                     <img src="./assets/images/run-buddy.JPG" alt="Screenshot of the main landing page of the Run Buddy Website" id="first-sample">
@@ -118,5 +118,10 @@
             <a href="#" class="fa fa-instagram"></a>
         </div>
     </section>
+    
+    <!-- footer -->
+    <footer>
+        <h2>Designed and coded with ❤️ by Andrea Rowland</h2>
+    </footer>
 </body>
 
