--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
             </div>
 
             <div class="feeling-social">
+                <div>
                 <h3>Feeling Social?</h3><br />
-                <br />
+                
                 <p>Find me on these online spaces too!</p></br>
 
                 <a href="https://www.facebook.com/andrea.r.haag" target="_blank" class="sm-links">
@@ -173,6 +174,7 @@
                 <a href="https://www.linkedin.com/in/andrea-haag-328354180/" target="_blank" class="sm-links">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
+            </div>
             </div>
 
 
