added link to resume

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </h2>
         </div>
 
-        <div class="contact-info">
+        <div class="contact-info" id = "contact-info">
             <div>
                 <h3>Mailing Address</h3>
 
@@ -141,7 +141,8 @@
                     Herriman, UT<br />
                     84096<br />
                     P: 801.201.1555<br />
-                    E: <a href="mailto:andreadrowland@gmail.com">andreadrowland@gmailcom</a>
+                    E: <a href="mailto:andreadrowland@gmail.com">andreadrowland@gmailcom</a><br/>
+                    <a href = "./assets/docs/Andrea Resume 2022.pdf" id = "resume"><strong>Click here for my resume</strong></a>
                 </address>
 
             </div>
