added Serenity Now project

--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                 <img src="./assets/images/GitHub/GitHub-Mark-120px-plus.png" alt="GitHub OctoCat logo" width="100px"
                     height="auto" class="skill-logos">
             </div>
+            <div>
+                <img src="./assets/images/jquery-icon.png" alt="JQuery logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/Ajax-develoment-side-image.png" alt="Ajax logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
         </div>
         </div>
     </section>
@@ -101,10 +109,10 @@
         </div>
         <div id="my-work" class="work-examples">
             <article class="first">
-                <a href="https://andrea-rowland.github.io/run-buddy/">
-                    <img src="./assets/images/run-buddy.JPG"
-                        alt="Screenshot of the main landing page of the Run Buddy Website" id="first-sample">
-                    <label for="first-sample">Run Buddy Website</label>
+                <a href="https://andrea-rowland.github.io/serenity-now/">
+                    <img src="./assets/images/SN-screenshot.JPG"
+                        alt="Screenshot of the main landing page of the Serenity Now App" id="first-sample">
+                    <label for="first-sample">Serenity Now App</label>
                 </a>
             </article>
             <article>
@@ -114,11 +122,10 @@
                 </a>
             </article>
             <article>
-                <a href="https://www.songbird-musicstudio.com/">
-                    <img src="./assets/images/Songbird-website.JPG"
-                        alt="Studio name with rainbow colored bird with instruments and notes integrated into it's body"
-                        id="songbird">
-                    <label for="songbird" class="project title">Songbird Studio Website</label>
+                <a href="https://andrea-rowland.github.io/run-buddy/">
+                    <img src="./assets/images/run-buddy.JPG"
+                        alt="Screenshot of the main landing page of the Run Buddy Website" id="first-sample">
+                    <label for="run-buddy">Run Buddy Website</label>
                 </a>
             </article>
         </div>
