updated about section

--- a/index.html
+++ b/index.html
@@ -45,15 +45,10 @@
     <section id="about" class="bio">
         <div>
             <h2 class="section-title">About Me</h2>
-            <p>For the past 14 years, I have been working in Higher Education. I've helped students transition from high
-                school to college succesfully, ensured they made the most of their first year at the University, and
-                assisted them in finding research positions and presenting/publishing their work. My experience at the
-                University has given me the opportunity to work with people in various demographics, learn how to
-                operate successfully in a large University, and manage programs and people to produce optimal results.
+            <p>Front-end web developer leveraging psychology background to build a more intuitive user experience on the web. Currently earning a certificate in full stack development from the University of Central Utah, with newly developed skills in JavaScript, CSS, React.js, and responsive web design. Known as an innovative problem solver passionate about developing apps, with a focus on mobile-first design and development. With each project, my aim is to best engage my audience for an impactful user experience. I applied aspects of UX and agile development in a recent project. 
+                
             </p><br />
-            <p>Ready for a new challenge, I decided to enroll in the University of Utah's Full Stack Development
-                Bootcamp. I'm thrilled to be learning new concepts and languages and finding ways to implement them in
-                my work.</p>
+            
         </div>
         <article class="photo">
             <img src="./assets/images/andrea-rowland-crop.jpg" alt="Andrea Rowland smiling">
