--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="about" class="bio">
         <div>
             <h2 class="section-title">About Me</h2>
-            <p>Front-end web developer leveraging psychology background to build a more intuitive user experience on the web. Currently earning a certificate in full stack development from the University of Central Utah, with newly developed skills in JavaScript, CSS, React.js, and responsive web design. Known as an innovative problem solver passionate about developing apps, with a focus on mobile-first design and development. With each project, my aim is to best engage my audience for an impactful user experience. I applied aspects of UX and agile development in a recent project. 
+            <p>Front-end web developer leveraging psychology background to build a more intuitive user experience on the web. Currently earning a certificate in full stack development from the University of Utah, with newly developed skills in JavaScript, CSS, React.js, and responsive web design. Known as an innovative problem solver passionate about developing apps, with a focus on mobile-first design and development. With each project, my aim is to best engage my audience for an impactful user experience. I applied aspects of UX and agile development in a recent project. 
                 
             </p><br />
             
