updated my work section

--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
         </div>
         <div id="my-work" class="work-examples">
             <article class="first">
-                <a href="https://andrea-rowland.github.io/serenity-now/">
-                    <img src="./assets/images/SN-screenshot.JPG"
-                        alt="Screenshot of the main landing page of the Serenity Now App" id="first-sample">
-                    <label for="first-sample">Serenity Now App</label>
+                <a href="https://strategic-home-inspection.herokuapp.com/">
+                    <img src="./assets/images/Screenshot-main.JPG"
+                        alt="Screenshot of the main landing page of the Strategic Home Inspection Company" id="first-sample">
+                    <label for="first-sample">Strategic Investments Home Inspection</label>
                 </a>
+
+                <!-- https://strategic-home-inspection.herokuapp.com/ -->
             </article>
             <article>
-                <a href="https://andrea-rowland.github.io/code-refactor/">
-                    <img src="./assets/images/Horiseon.JPG" alt="Preview of the Horiseon website" id="horiseon">
-                    <label for="horiseon" class="project-title">Horiseon Code Refactor</label>
+                <a href="https://andrea-rowland.github.io/serenity-now/">
+                    <img src="./assets/images/SN-screenshot.JPG" alt="Screenshot of the main landing page of the Serenity Now App" id="serenity-now">
+                    <label for="serenity-now" class="project-title">Serenity Now</label>
                 </a>
             </article>
             <article>
