updated resume and projects

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="about" class="bio">
         <div>
             <h2 class="section-title">About Me</h2>
-            <p>Front-end web developer leveraging psychology background to build a more intuitive user experience on the web. Currently earning a certificate in full stack development from the University of Utah, with newly developed skills in JavaScript, CSS, React.js, and responsive web design. Known as an innovative problem solver passionate about developing apps, with a focus on mobile-first design and development. With each project, my aim is to best engage my audience for an impactful user experience. I applied aspects of UX and agile development in a recent project. 
+            <p>Full-stack developer leveraging psychology background to build a more intuitive user experience on the web. Recently earned a certificate in full stack development from the University of Utah, with newly developed skills in JavaScript, CSS, React.js, and responsive web design. Known as an innovative problem solver passionate about developing apps, with a focus on mobile-first design and development. With each project, my aim is to best engage my audience for an impactful user experience.
                 
             </p><br />
             
@@ -63,7 +63,32 @@
             <h2>My Skills</h2>
         </div>
         <div class="skills-images">
-            <div>
+            <ul className="skillset">
+                <div class="group1">
+                <div class="group1">
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript</li>
+                    <li>Git</li>
+                    <li>jQuery</li>
+                </div>
+            </div>
+                <div class="group2"> 
+                    <li>AJAX</li>
+                    <li>ES6</li>
+                    <li>mongoDB</li>
+                    <li>mongoose</li>
+                    <li>MySQL</li>
+                </div>
+                <div class="group3">
+                    <li>node.js</li>
+                    <li>NoSQL</li>
+                    <li>PWA</li>
+                    <li>React JS</li>
+                    <li>Sequelize.js</li>
+                </div>
+            </ul>
+            <!-- <div>
                 <img src="./assets/images/html-1.svg" alt="HTML Logo" width="100px" height="auto" class="skill-logos">
             </div>
             <div class="skill-logos">
@@ -93,6 +118,42 @@
                 <img src="./assets/images/Ajax-develoment-side-image.png" alt="Ajax logo" width="100px"
                     height="auto" class="skill-logos">
             </div>
+            <div>
+                <img src="./assets/images/mySQL.png" alt="MySQL logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/sequelize.png" alt="Sequelize logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/Nosql.jfif" alt="Nosql logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/Progressive Web Apps.jfif" alt="Progressive Web Application logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/mongoose.png" alt="Mongoose logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/mongoDB.png" alt="MongoDB logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/React.png" alt="React logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/nodejs-new-pantone-black.svg" alt="Node.js logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div>
+            <div>
+                <img src="./assets/images/expressjs.png" alt="Express.js logo" width="100px"
+                    height="auto" class="skill-logos">
+            </div> -->
         </div>
         </div>
     </section>
@@ -102,27 +163,27 @@
         <div>
             <h2>My Work</h2>
         </div>
-        <div id="my-work" class="work-examples">
+        <div id="my-work" class="work-examples"> 
             <article class="first">
-                <a href="https://strategic-home-inspection.herokuapp.com/">
-                    <img src="./assets/images/Screenshot-main.JPG"
-                        alt="Screenshot of the main landing page of the Strategic Home Inspection Company" id="first-sample">
-                    <label for="first-sample">Strategic Investments Home Inspection</label>
+                <a href="https://artofjenna.herokuapp.com/" target="_blank">
+                    <img src="./assets/images/Jenna-Louise-eCommerce.JPG"
+                        alt="Screenshot of the main landing page for artist Jenna Louise' eCommerce site" id="first-sample">
+                    <label for="first-sample">The Art of Jenna Louise</label>
                 </a>
 
                 <!-- https://strategic-home-inspection.herokuapp.com/ -->
             </article>
             <article>
-                <a href="https://andrea-rowland.github.io/serenity-now/">
+                <a href="https://andrea-rowland.github.io/serenity-now/" target="blank">
                     <img src="./assets/images/SN-screenshot.JPG" alt="Screenshot of the main landing page of the Serenity Now App" id="serenity-now">
                     <label for="serenity-now" class="project-title">Serenity Now</label>
                 </a>
             </article>
             <article>
-                <a href="https://andrea-rowland.github.io/run-buddy/">
-                    <img src="./assets/images/run-buddy.JPG"
-                        alt="Screenshot of the main landing page of the Run Buddy Website" id="first-sample">
-                    <label for="run-buddy">Run Buddy Website</label>
+                <a href="https://strategic-home-inspection.herokuapp.com/" target="blank">
+                    <img src="./assets/images/Screenshot-main.JPG"
+                        alt="Screenshot of the main landing page of the Strategic Home Inspection Company" id="strategic-home">
+                    <label for="strategic-home">Strategic Invesnment Home Inspection</label>
                 </a>
             </article>
         </div>
@@ -138,15 +199,12 @@
 
         <div class="contact-info" id = "contact-info">
             <div>
-                <h3>Mailing Address</h3>
+                <h3>Contact Info</h3>
 
                 <address>
-                    4493 Wharton Drive <br />
-                    Herriman, UT<br />
-                    84096<br />
                     P: 801.201.1555<br />
                     E: <a href="mailto:andreadrowland@gmail.com">andreadrowland@gmailcom</a><br/>
-                    <a href = "./assets/docs/Andrea Resume 2022.pdf" id = "resume"><strong>Click here for my resume</strong></a>
+                    <a href = "./assets/images/Andrea Resume 2022 - v2.pdf" id = "resume" target="blank"><strong>Click here for my resume</strong></a>
                 </address>
 
             </div>
@@ -188,6 +246,6 @@
 
     <!-- footer -->
     <footer>
-        <h2>Designed and coded with <span>&#10084</span> by Andrea Rowland </h2>
+        <h2>Designed and coded by Andrea Rowland </h2>
     </footer>
 </body>
